--- a/html/index.html
+++ b/html/index.html
@@ -11,5 +11,5 @@
 <img src="https://i.imgur.com/ehY5c6xb.jpg" title="dog" alt="">
 <h2>I love cheese</h2>
 <p>i love eating chocolate but not in <em>other</em> people's houses<p>
-<p><code>I am learning to code</code></p>
+<p><code>I am learning to code!</code></p>
 </body>
